# Shreni

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  Shreni-ARD-Phalaka.md  Shreni-PRD.md  Shreni-TDD.md  TRADEMARK.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: certify-packs.yml  release-binaries.yml
docs/architecture/: extension-points.md
packaging/: RELEASING.md
packaging/homebrew/: shreni.rb
packs/go-service/: arch.md  pack.yaml  review-guide.md  style-guide.md
packs/nextjs-vitest/: arch.md  pack.yaml  review-guide.md  style-guide.md
packs/node-api/: arch.md  pack.yaml  review-guide.md  style-guide.md
packs/python-fastapi/: arch.md  pack.yaml  review-guide.md  style-guide.md
packs/python-fastapi/reference/: backlog.sh  pyproject.toml
packs/python-fastapi/reference/app/: main.py  models.py
packs/python-fastapi/reference/app/routers/: items.py
packs/python-fastapi/reference/app/services/: items.py
packs/python-fastapi/reference/tests/: test_items.py
scripts/: build-binary.mjs  certify-pack.ts
src/: test-setup.ts
src/agents/: e2e.test.ts  e2e.ts  parikshaka.test.ts  parikshaka.ts  runner.test.ts  runner.ts  silpi.test.ts  silpi.ts  viharapala.test.ts  viharapala.ts
src/cert/: assertions.test.ts  assertions.ts
src/cli/: agents.test.ts  agents.ts  commands.ts  daemon.ts  index.ts  (+48 more)
supabase/: README.md
(+128 files in other folders)
